force-app/main/default/objects/RecordTypes__c/RecordTypes__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>RecordTypes</label>
</CustomObject>