force-app/main/default/objects/RecordTypes__c/fields/Business_Case_Business_Case_Addendum__c.field-meta.xml
<CustomField>
    <fullName>Business_Case_Business_Case_Addendum__c</fullName>
    <label>Business Case - Business Case Addendum</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>