force-app/main/default/objects/RecordTypes__c/fields/Initiative_Partner_Plan__c.field-meta.xml
<CustomField>
    <fullName>Initiative_Partner_Plan__c</fullName>
    <label>Initiative - Partner Plan</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>